# tgnn-gen-bench

./: .gitignore  README.md  pyproject.toml
.tmp/integration_tests/0c4282c9376f4c99b29bd03eeb945bb2/: generated_shifted.csv
.tmp/integration_tests/6823f77a59514a7282b0af2721c499aa/: generated_same.csv
examples/: run_thiers_pipeline.py
examples/outputs/thiers_yaml_experiment/: manifest.json
examples/outputs/thiers_yaml_experiment/thiers_2012_graph_0_vs_graph_1/: thiers_2012_graph_0_vs_graph_1.summary.json
examples/outputs/thiers_yaml_experiment/thiers_2012_graph_0_vs_graph_2/: thiers_2012_graph_0_vs_graph_2.summary.json
examples/thiers_yaml_experiment/: experiment.yaml  run_experiment.py
scripts/: evaluate.py  inspect_metric_outputs.py  inspect_thiers_metric_outputs.py
src/tgnn_gen_bench/: __init__.py
src/tgnn_gen_bench/data/: __init__.py  csv.py
src/tgnn_gen_bench/distances/: __init__.py  ks.py
src/tgnn_gen_bench/evaluation/: __init__.py  evaluator.py  results.py
src/tgnn_gen_bench/graphs/: __init__.py  base.py  builders.py
src/tgnn_gen_bench/metrics/: __init__.py  _graph_utils.py  base.py  categories.py
src/tgnn_gen_bench/metrics/downstream_tasks/: __init__.py  _temporal_link_prediction_helpers.py  (+2 more)
src/tgnn_gen_bench/pipeline/: __init__.py  evaluation_radar_pipeline.py
src/tgnn_gen_bench/report/: __init__.py  _radar_config.py  _radar_figures.py  _radar_helpers.py  _radar_plotter.py  radar.py  style.py
tests/: conftest.py
tests/integration/: test_evaluator_metrics_integration.py
tests/unit/: _metric_graphs.py  test_downstream_tasks.py  test_dynamics_metrics.py  test_evaluation_pipeline.py  test_evaluator.py  test_global_metrics.py  test_graphs_base.py  test_metric_categories.py  test_radar_plotter.py  test_structural_metrics.py  test_temporal_fidelity_metrics.py
(+26 files in other folders)
