[project]
name = "tgnn-gen-bench"
version = "0.1.0"
description = "A Temporal Graph Neural Network Generative model framework for evaluating generated graphs based on the TGM research library."
authors = [
    {name = "Antonio Longa, Kjartan van Driel, Iker C. Bragagnini, Yelizaveta Falkouskaya, Eylul Pelin Kilic, Fatemeh Gholamzadeh"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "polars (>=1.42.1,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "tgm-lib",
    "torch (>=2.13.0,<3.0.0)",
    "commitizen (>=4.16.5,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--basetemp=.tmp/pytest_tmp"
cache_dir = ".tmp/pytest_cache"
testpaths = ["tests"]
